src/test/resources/invalid/typecheck/Expression_CallableWrongArg.vas
class Main is
    this() is
        A(42)
    end
end

class A is
    this(b: Boolean) is
    end
end
